<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
    tools:context=".SplashScreenActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_Splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_Spalsh_Photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/github" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/imageView_Spalsh_Photo"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_Splash_Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/splash_name"
                    style="@style/Name"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_Splash_Username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Username"
                    android:textAlignment="center"
                    android:text="@string/splash_username" />

                <TextView
                    android:id="@+id/textView_Splash_Description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/splash_desc"
                    style="@style/Detail"
                    android:textAlignment="center" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>